<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="label_create_order">创建订单</string>
    <string name="create_order_select_client">客户</string>
    <string name="create_order_select_account">账号</string>
    <string name="create_order_select_character">角色</string>
    <string name="create_order_select_category">分类</string>
    <string name="create_order_select_subject">项目</string>
    <string name="create_order_start_date">开始日期</string>
    <string name="create_order_start_time">开始时间</string>
    <string name="create_order_total_amount">总金额</string>
    <string name="create_order_payment_status">支付状态</string>
    <string name="create_order_payment_method">支付方式</string>
    <string name="create_order_payment_date">支付日期</string>
    <string name="create_order_payment_time">支付时间</string>
    <string name="create_order_payment_amount">已支付金额</string>
    <string name="create_order_remark">备注</string>
    <string name="create_order_success">创建订单成功</string>

    <string name="helper_create_order_total_amount_greater_than_payment_amount_when_paid">在已支付状态下总价大于已支付金额时, 支付状态将变更为部分支付</string>
    <string name="helper_create_order_payment_amount_less_than_total_amount_when_paid">在已支付状态下已支付金额小于总价时, 支付状态将变更为部分支付</string>
    <string name="helper_create_order_total_amount_equal_to_payment_amount_when_partially_paid">在部分支付状态下总价等于已支付金额时, 支付状态将变更为已支付</string>
    <string name="helper_create_order_payment_amount_equal_to_total_amount_when_partially_paid">在部分支付状态下已支付金额等于总价时, 支付状态将变更为已支付</string>

    <string name="label_character_selection">选择角色</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="error_create_order_client">请选择客户</string>
    <string name="error_create_order_account">请选择账号</string>
    <string name="error_create_order_character">请选择角色</string>
    <string name="error_create_order_category">请选择分类</string>
    <string name="error_create_order_subject">请选择项目</string>
    <string name="error_create_order_total_amount">请输入总价</string>
    <string name="error_create_order_total_amount_can_not_lower_than_payment_amount">总价不能低于已支付金额</string>
    <string name="error_create_order_payment_method">请选择支付方式</string>
    <string name="error_create_order_payment_amount">请输入已支付的金额</string>
    <string name="error_create_order_payment_amount_can_not_bigger_than_total_amount">已支付金额不能大于总价</string>
    <string name="error_create_order">创建订单失败</string>

</resources>